cowdancer (0.49) UNRELEASED; urgency=low

  * qemubuilder: depend on debootstrap. (closes: #496077)
  * cowbuilder package: split out from cowdancer. cowdancer can be useful
    in more cases than cowbuilder. (closes: #459436)
  * Add a README.Debian for cowbuilder (closes: #496458)

 -- Junichi Uekawa <dancer@debian.org>  Mon, 25 Aug 2008 21:20:03 -0700

cowdancer (0.48) unstable; urgency=low

  * qemubuilder: add support for armel.
  * qemubuilder: add support for --arch-diskdevice option so that users of
    Ubuntu i386 kernels can override from default hd to sd.

 -- Junichi Uekawa <dancer@debian.org>  Sun, 10 Aug 2008 23:40:39 +0900

cowdancer (0.47) unstable; urgency=low

  * Bug fix: "cowdancer: unexpected WIFEXITED status in waitpid", thanks
    to Andreas Beckmann (Closes: #466709).
    Block SIGCHLD when forking cp.

 -- Junichi Uekawa <dancer@debian.org>  Tue, 20 May 2008 07:58:24 +0900

cowdancer (0.46) unstable; urgency=low

  * make cowbuilder work with cowbuilder in etch.  Bug 410723 will revive,
    so it will need --debian-etch-workaround option to enable.
    "provide cowdancer etch support", thanks to Patrick Winnertz
    (Closes: #481344).
  * Add reference to --no-cowdancer-update option in the error message so
    that it's more obvious. (Closes: #481609).

 -- Junichi Uekawa <dancer@debian.org>  Sun, 18 May 2008 12:24:21 +0900

cowdancer (0.45) unstable; urgency=low

  * cowbuilder, qemubuilder: Give error message when '--build' is invoked
    without .dsc file parameter.  (Closes: #460041).
  * output more useful info on waitpid WIFEXITED debug message.
  * add header to .ilist, so that it is possible to know a little bit more
    about the structure.  Note that upgrade will fail within cowdancer
    session, please re-create chroot, or use the --no-cowdancer-update option:

      Unpacking cowdancer (from .../cowdancer_0.45_amd64.deb) ...