@@ -4,8 +4,10 @@ cowdancer (0.49) UNRELEASED; urgency=low
   * cowbuilder package: split out from cowdancer. cowdancer can be useful
     in more cases than cowbuilder. (closes: #459436)
   * Add a README.Debian for cowbuilder (closes: #496458)
+  * Handle IPv4 'lo' device address (127.0.0.0) for --mirror option
+    specially, so that they are translated to 10.0.2.2 inside qemu.
 
- -- Junichi Uekawa <dancer@debian.org>  Mon, 25 Aug 2008 21:20:03 -0700
+ -- Junichi Uekawa <dancer@debian.org>  Sun, 31 Aug 2008 23:00:39 -0700
 
 cowdancer (0.48) unstable; urgency=low
 
